Fixed image title text spacing.

--- a/static/assets/css/alpine.css
+++ b/static/assets/css/alpine.css
@@ -151,6 +151,7 @@ nav.main-nav {
 
 .site-title a {
 	vertical-align: top;
+	margin-left: 5px;
 }
 
 .site-image {
